[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenario/CutScenes/Timer/Timer.gd" type="Script" id=1]
[ext_resource path="res://Scenario/CutScenes/Timer/bg-cut-2.png" type="Texture" id=2]
[ext_resource path="res://Scenario/CutScenes/Timer/bg-cut-1.png" type="Texture" id=3]
[ext_resource path="res://Scenario/CutScenes/Timer/bg-cut-3.png" type="Texture" id=4]
[ext_resource path="res://Scenario/CutScenes/Timer/bg-cut-4.png" type="Texture" id=5]
[ext_resource path="res://BasicAssets/Square.png" type="Texture" id=6]
[ext_resource path="res://Scenario/CutScenes/Timer/TEMA_FINAL_GANHA.ogg" type="AudioStream" id=7]

[node name="Timer" type="Node2D"]
script = ExtResource( 1 )

[node name="BG05" type="Sprite" parent="."]
position = Vector2( -64, -144 )
scale = Vector2( 3.776, 3.528 )
texture = ExtResource( 6 )
centered = false

[node name="BG01" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="BG04" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="BG02" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="BG03" type="Sprite" parent="."]
position = Vector2( 0, 5 )
texture = ExtResource( 4 )
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -17.0
autoplay = true
